k8s/gateway-dev-deployment.yml
---
# Deployment: Gateway 애플리케이션 배포 설정
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    spec:
      containers:
        - name: gateway
          image: ${DOCKER_USERNAME}/flex-be-gateway:${IMAGE_TAG}
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          configMap:
            name: gateway-config
---
# Service: Gateway 애플리케이션을 위한 내부 서비스 생성
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway
  ports:
    - port: 80
      targetPort: 8080

---
# Ingress: 외부에서 Gateway로의 접근을 관리
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 80

---
# Service: Eureka 서버를 위한 내부 서비스 생성
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
spec:
  selector:
    app: eureka-service
  ports:
    - port: 8761
      targetPort: 8761
